...
                                    <action selector="colorButtonTapped:" destination="JEX-9P-axG" eventType="touchUpInside" id="5jO-gO-PFP"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dsa-ls-h2m" userLabel="purpleButton">
                                <rect key="frame" x="249" y="72" width="32" height="30"/>
                                <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" label="purple"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="32" id="v49-hO-eG4"/>
                                </constraints>
                                <state key="normal">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="colorButtonTapped:" destination="JEX-9P-axG" eventType="touchUpInside" id="H1e-Nb-Co5"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Note" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-RD-Hiu">
                                <rect key="frame" x="150" y="106" width="300" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="300" id="9l9-dU-7wX"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <constraint firstItem="n2G-Gk-YxI" firstAttribute="baseline" secondItem="Dsa-ls-h2m" secondAttribute="baseline" id="wkd-IE-10F"/>
                            <constraint firstItem="AWx-K0-ZqI" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="xWM-QZ-aoF"/>
                            <constraint firstItem="n2G-Gk-YxI" firstAttribute="leading" secondItem="JYm-Di-clB" secondAttribute="trailing" constant="3" id="zJ1-xA-esv"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Setup Task" id="mOI-FS-AaM"/>
                    <connections>
                        <outlet property="blackButton" destination="n2G-Gk-YxI" id="xwt-x5-s5y"/>
                        <outlet property="blueButton" destination="JYm-Di-clB" id="blT-CM-bVD"/>
                        <outlet property="datePicker" destination="DBy-wQ-6RL" id="6p3-ID-iTV"/>
                        <outlet property="greenButton" destination="vcl-ec-AnP" id="05I-Tn-4s9"/>
                        <outlet property="noteField" destination="MLi-RD-Hiu" id="nFN-pb-hAy"/>
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="7bK-jq-Zjz" id="Gho-Na-rnu"/>
                            <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Tasks" id="Zdf-7t-Un8"/>
                    <connections>
                        <segue destination="jTL-Iv-U5N" kind="show" identifier="showStats" id="HzY-g0-zwO"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
            </objects>
...
