...
        self.saveContext()
    }
    
    func application(application: UIApplication, didReceiveLocalNotification notification: UILocalNotification) {
        let state = application.applicationState
        if state == UIApplicationState.Active {
            let alert = UIAlertView(title: "Task due soon", message: notification.alertBody, delegate: self, cancelButtonTitle: "Ok")
            alert.show()
        }
        application.applicationIconBadgeNumber = 0
    }

    
...
